[workspace]
members = [
	"server",
	"client"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
riptun = { version = "0.1", default-features = false, features = [] }
tokio-tungstenite = "0.20.1"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
