[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
riptun.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
etherparse = "0.13"
url = "2.3.1"
